# poco-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  docker-compose.r2.yml  docker-compose.yml  pyproject.toml
executor/: CLAUDE.md  pyproject.toml
executor/app/: main.py
executor/tests/: test_callback_client.py  test_callback_hook.py  test_engine.py  test_hook_registry.py  test_permission_engine.py  test_prompt_append.py  test_task_api.py  test_workspace.py  test_workspace_hook.py
executor_manager/: CLAUDE.md  README.md  pyproject.toml
executor_manager/tests/: conftest.py  test_anthropic_credentials.py  test_api_endpoints.py  test_attachment_stager.py  test_backend_client.py  test_callback_service.py  test_claude_md_stager.py  test_cleanup_service.py  test_computer_service.py  test_config_resolver.py  test_exception_handlers.py  test_executor_api.py  test_executor_client.py  test_lifespan.py  test_local_mount_service.py  test_main.py  test_memories_api.py  test_observability_logging.py  test_plugin_stager.py  test_preset_resolver.py  test_pull_job_registry.py  test_pull_schedule_config.py  test_request_logging.py  test_run_pull_service.py  test_scheduled_task_dispatch_service.py  test_schedules_api.py  test_skill_stager.py  test_skills_upload_api.py  test_slash_command_stager.py  test_storage_service.py  test_sub_agent_stager.py  test_task_dispatcher.py  test_task_service.py  test_tasks_api.py  test_user_input_requests_api.py  (+3 more)
(+854 files in other folders)
