[project]
name = "executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk==0.1.48",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pyrefly]
project-includes = [
    "app/**/*.py",
    "app/**/*.pyi",
]

search_path = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
